--- a/config
+++ b/config
@@ -2,7 +2,7 @@
 fitness_criterion     = max
 fitness_threshold     = 950
 no_fitness_termination = False
-pop_size              = 20
+pop_size              = 10
 reset_on_extinction   = False
 
 [DefaultGenome]
@@ -19,8 +19,8 @@ aggregation_options     = sum
 # node bias options
 bias_init_mean          = 0.0
 bias_init_stdev         = 1.0
-bias_max_value          = 30.0
-bias_min_value          = -30.0
+bias_max_value          = 3.0
+bias_min_value          = -3.0
 bias_mutate_power       = 0.5
 bias_mutate_rate        = 0.7
 bias_replace_rate       = 0.1
@@ -38,23 +38,23 @@ enabled_default         = True
 enabled_mutate_rate     = 0.3
 
 feed_forward            = True
-initial_connection      = full_nodirect
+initial_connection      = full_direct
 
 # node add/remove rates
-node_add_prob           = 0.75
+node_add_prob           = 0.2
 node_delete_prob        = 0.1
 
 # network parameters
-num_hidden              = 9
-num_inputs              = 27648
+num_hidden              = 0
+num_inputs              = 108
 num_outputs             = 3
 
 # node response options
 response_init_mean      = 1.0
 response_init_stdev     = 0.0
 # response_init_type    = uniform
-response_max_value      = 30.0
-response_min_value      = -30.0
+response_max_value      = 3.0
+response_min_value      = -3.0
 response_mutate_power   = 0.0
 response_mutate_rate    = 0.0
 response_replace_rate   = 0.0
@@ -62,10 +62,10 @@ response_replace_rate   = 0.0
 # connection weight options
 weight_init_mean        = 0.0
 weight_init_stdev       = 1.0
-weight_max_value        = 30
-weight_min_value        = -30
-weight_mutate_power     = 0.5
-weight_mutate_rate      = 0.8
+weight_max_value        = 3
+weight_min_value        = -3
+weight_mutate_power     = 0.2
+weight_mutate_rate      = 0.3
 weight_replace_rate     = 0.1
 
 [DefaultSpeciesSet]
@@ -74,7 +74,7 @@ compatibility_threshold = 3.0
 [DefaultStagnation]
 species_fitness_func = max
 max_stagnation       = 2
-species_elitism      = 1
+species_elitism      = 2
 
 [DefaultReproduction]
 elitism            = 2
